style: fix overflow main page

--- a/client/src/app/pages/main-page/main-page.component.scss
+++ b/client/src/app/pages/main-page/main-page.component.scss
@@ -24,26 +24,18 @@
 }
 
 .container {
-    min-height: 100vh;
-    height: auto;
+    height: 100vh;
     color: rgb(0, 0, 0);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-nav {
-    background-color: #5cbf99;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
+    overflow: hidden;
 }
 
 app-nav-bar {
-    position: absolute;
     font-family: 'Troika', sans-serif;
     font-size: 20px;
-    margin-right: 20px;
+    background-color: #db9110;
 }
 
 h1 {
@@ -80,7 +72,6 @@ h1 {
     font-family: 'Troika', sans-serif;
     font-size: 60px;
     width: 40vw;
-    height: 80px;
     margin-bottom: 20px;
     text-transform: uppercase;
     transition: 0.5s;
